# hello-glean

./: .gitignore  README.md  pyproject.toml  requirements.txt
skills/glean-chat/: SKILL.md
skills/glean-chat/patterns/: first-person-scoping.md  keyword-vs-question.md  session-strategy.md
skills/glean-mcp/: SKILL.md
skills/glean-mcp/examples/: incident-investigation.md  multi-faceted-research.md  weekly-team-newsletter.md
skills/glean-mcp/patterns/: multi-turn-drill.md
src/glean_cli/: cli.py  core.py  mcp_server.py
